<resources>
    <string name="app_name">TresEnRaya2vs2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- titulos -->
    <string name="titulo_dificultad">CHOOSE A DIFFICULTY</string>
    <string name="titulo_modo">SELECT MODE</string>
    <string name="titulo_select_player">SELECT PLAYER...</string>
    <string name="titulo_jugando">Playing...</string>
    <string name="titulo_empate">Empate!</string>
    <string name="titulo_ganadorPlayer">WIN!</string>
    <string name="titulo_ganadorMachine">The machine is the winner!</string>
    <string name="titulo_jugandoPlayer1">Turn of player 1...</string>
    <string name="titulo_jugandoPlayer2">Turn of player 2...</string>
    <string name="titulo_jugandoPlayer">Turn of player 1...</string>
    <string name="titulo_jugandoMachine">Turn of machine...</string>
    <string name="titulo_ganadorPlayer1">The winner is PLAYER-1</string>
    <string name="titulo_ganadorPlayer2">The winner is PLAYER-2</string>

    <!-- textos -->
    <string name="d_facil">EASY</string>
    <string name="d_medio">MEDIUM</string>
    <string name="d_dificil">HARD</string>
    <string name="modo1">PLAYER vs MACHINE</string>
    <string name="modo2">PLAYER-1 vs PLAYER-2</string>
    <string name="restart">RESTART</string>
    <string name="btnGo">Go!</string>
    <string name="btnPlayer1">Player-1</string>
    <string name="btnPlayer2">Player-2</string>
    <string name="btnPlayer">Player</string>
    <string name="btnMachine">Machine</string>
    <string name="btnSettings">Settings</string>
    <!-- Preference Titles -->
    <string name="nickName_header">Write the nick name</string>
    <string name="level_header">Choose the level</string>

    <!-- Nick Name Preferences -->
    <string name="nickName1">Name of player 1</string>
    <string name="nickName2">Name of player 2</string>

    <!-- Level Preferences -->
    <string name="lvlEasy">Easy level</string>
    <string name="lvlMedio">Medium level</string>
    <string name="lvlEasy_on"> Puedes activar el nivel medio </string>
    <string name="lvlEasy_off"> Se ha de activar el nivel fácil </string>
    <string name="lvlMedio_on"> Nivel medio activado </string>
    <string name="lvlMedio_off"> Activar primero nivel fácil </string>

</resources>