<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/nickName_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/nickName1"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="signature2"
            app:title="@string/nickName2"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/level_header">

        <SwitchPreferenceCompat
            app:key="lvl"
            app:title="@string/lvlEasy"
            app:summaryOff="@string/lvlEasy_off"
            app:summaryOn="@string/lvlEasy_on" />

        <SwitchPreferenceCompat
            app:dependency="lvl"
            app:key="lvl2"
            app:summaryOff="@string/lvlMedio_off"
            app:summaryOn="@string/lvlMedio_on"
            app:title="@string/lvlMedio" />

    </PreferenceCategory>

</PreferenceScreen>