<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.Menu" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="168dp"
        android:src="@drawable/tres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089999974" />

    <TextView
        android:id="@+id/tvDificultad"
        android:layout_width="275dp"
        android:layout_height="24dp"
        android:text="@string/titulo_dificultad"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/d_facil"
        app:layout_constraintBottom_toBottomOf="@+id/btnMedio"
        app:layout_constraintEnd_toStartOf="@+id/btnMedio"
        app:layout_constraintTop_toTopOf="@+id/btnMedio" />

    <Button
        android:id="@+id/btnMedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/d_medio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDificultad"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9F1717"
        android:text="@string/d_dificil"
        app:layout_constraintBottom_toBottomOf="@+id/btnMedio"
        app:layout_constraintStart_toEndOf="@+id/btnMedio"
        app:layout_constraintTop_toTopOf="@+id/btnMedio" />

    <TextView
        android:id="@+id/tvModo"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:text="@string/titulo_modo"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedio"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/btnModo1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/modo1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModo"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/btnModo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modo2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnModo1"
        app:layout_constraintStart_toStartOf="@+id/btnModo1"
        app:layout_constraintTop_toBottomOf="@+id/btnModo1" />
</androidx.constraintlayout.widget.ConstraintLayout>